...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsMMRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="317dp"
        android:layout_marginBottom="317dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginBottom="414dp"
        android:text="Players"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/privateLobbyCreate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/privateLobbyJoin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorGroup"
        android:layout_width="wrap_content"
...
        app:constraint_referenced_ids="errorIdNotFound,errorIdExists,errorIdNonEmpty" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/privateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="lobbyIdInsert,friendsMMRecycler,lobbyIdWaitShowing,textView10"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="363dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/waitGroup"
        android:layout_width="wrap_content"
...
        android:layout_height="wrap_content"
        android:text="Private Lobby"
        app:layout_constraintBottom_toTopOf="@+id/lobbyIdInsert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RandomLobbySearch" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/setupGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="privateLobbyCreate,privateLobbyJoin,lobbyIdInsert,privateLobbyText,RandomLobbySearch" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MMCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="638dp"
        android:layout_marginBottom="41dp"
        android:text="CANCEL"
        android:textSize="24sp"
...
