...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.displace.sdp2022.MainMenuActivity">

    <Button
        android:id="@+id/playVersusButton"
        android:layout_width="256dp"
        android:layout_height="127dp"
        android:layout_weight="2"
        android:onClick="playVs2Button"
        android:text="2 Players"
        app:layout_constraintBottom_toBottomOf="parent"
...
