...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/editProfile"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:text="Edit Profile"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
...
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/username"
        android:layout_width="416dp"
        android:layout_height="30dp"
        android:text="Name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
